--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
             <version>7.1.0</version>
         </dependency>
         <dependency>
+            <groupId>args4j</groupId>
+            <artifactId>args4j</artifactId>
+            <version>2.33</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>RELEASE</version>
