--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <version>3.8.0</version>
         </dependency>
         <dependency>
+            <groupId>com.medallia.word2vec</groupId>
+            <artifactId>Word2VecJava</artifactId>
+            <version>0.10.3</version>
+        </dependency>
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
